Completed Capstone. Minor bug: name of each category [trending news, top tracks, top artists...] is not aligned properly even though it has a h1 tag with text centered

--- a/capstone-react-client/src/containers/AuthContainer/index.css
+++ b/capstone-react-client/src/containers/AuthContainer/index.css
@@ -63,5 +63,6 @@
 }
 
 body{
-	min-width: 1000px;
+	min-width: 1280px;
+	max-width: 1280px;
 }
